--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "webpack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -24,10 +26,12 @@
     "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "html-webpack-plugin": "^5.6.2",
     "postcss": "^8",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   }
